# no-signal-next

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: custom.css  index.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  vts.json
src-tauri/src/: gemini.rs  lib.rs  main.rs  models.rs  scan.rs
