[package]
name = "no-signal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = ["demo"]
demo = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "no_signal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
anyhow = "1.0.93"
futures-util = "0.3.31"
axum = "0.7.7"
scannerlib = { git = "https://github.com/greenbone/openvas-scanner", branch = "main" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
get_if_addrs = "0.5.3"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
webbrowser = "1.0.2"
zip = "2.2.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
